--- a/public/frontend/css/styledwdwd.css
+++ b/public/frontend/css/styledwdwd.css
@@ -65,104 +65,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
         /* useraccount */
 
-        body {
-            margin-top: 20px;
-            color: #1a202c;
-            text-align: left;
-            background-color: #e2e8f0;
-        }
-
-        .main-body {
-            padding: 15px;
-        }
-
-        .card {
-            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
-        }
-
-        .card {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            min-width: 0;
-            word-wrap: break-word;
-            background-color: #fff;
-            background-clip: border-box;
-            border: 0 solid rgba(0, 0, 0, .125);
-            border-radius: .25rem;
-        }
-
-        .card-body {
-            flex: 1 1 auto;
-            min-height: 1px;
-            padding: 1rem;
-        }
-
-        .gutters-sm {
-            margin-right: -8px;
-            margin-left: -8px;
-        }
-
-        .gutters-sm>.col,
-        .gutters-sm>[class*=col-] {
-            padding-right: 8px;
-            padding-left: 8px;
-        }
-
-        .mb-3,
-        .my-3 {
-            margin-bottom: 1rem!important;
-        }
-
-        .bg-gray-300 {
-            background-color: #e2e8f0;
-        }
-
-        .h-100 {
-            height: 100%!important;
-        }
-
-        .shadow-none {
-            box-shadow: none!important;
-        }
-        /* \user account */
-
-        @media (min-width: 992px) {
-            .dropdown-menu .dropdown-toggle:after {
-                border-top: .3em solid transparent;
-                border-right: 0;
-                border-bottom: .3em solid transparent;
-                border-left: .3em solid;
-            }
-            .dropdown-menu .dropdown-menu {
-                margin-left: 0;
-                margin-right: 0;
-            }
-            .dropdown-menu li {
-                position: relative;
-            }
-            .nav-item .submenu {
-                display: none;
-                position: absolute;
-                left: 100%;
-                top: -7px;
-            }
-            .nav-item .submenu-left {
-                right: 100%;
-                left: auto;
-            }
-            .dropdown-menu>li:hover {
-                background-color: #f1f1f1
-            }
-            .dropdown-menu>li:hover>.submenu {
-                display: block;
-            }
-        }
-
-        .flexheight {
-            height: 2pc;
-        }
-
         html,
         body {
             margin: 0;
@@ -729,20 +631,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             transform: perspective(1px) translateZ(0);
             box-shadow: 0 0 1px transparent;
             background: #1accfd;
-            border-radius: 4px;
-            color: #fff;
-            letter-spacing: 2px;
-            padding: 11px 27px;
-            margin-top: 2em;
-        }
-
-        .info2 {
-            display: inline-block;
-            vertical-align: middle;
-            -webkit-transform: perspective(1px) translateZ(0);
-            transform: perspective(1px) translateZ(0);
-            box-shadow: 0 0 1px transparent;
-            background: #0d90b4;
             border-radius: 4px;
             color: #fff;
             letter-spacing: 2px;
@@ -1670,7 +1558,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
 
         .footer-info h3 {
-            color: black;
+            color: #1accfd;
             font-size: 22px;
             letter-spacing: 1px;
             margin-bottom: 25px;
@@ -1684,7 +1572,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
 
         .footer-grids ul li a {
-            color: white;
+            color: #656565;
             -webkit-transition: .5s all;
             -moz-transition: .5s all;
             -o-transition: .5s all;
