--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -6,6 +6,299 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
         /*css of flex slider  */
         /* dropdown style */
+        /* header */
+
+        .fixed-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+        }
+        /*----- Header Top -----*/
+
+        header {
+            position: relative;
+            z-index: 1;
+        }
+
+        header .right_bt {
+            float: right;
+        }
+
+        header .right_bt .btn {
+            margin: 26px 0 0;
+        }
+
+        .header_top {
+            min-height: 50px;
+        }
+
+        .header_bottom {
+            min-height: auto;
+        }
+
+        .header_top ul {
+            list-style: none;
+            margin: 10px 0;
+            padding: 0;
+        }
+
+        .header_top ul li {
+            font-size: 14px;
+            color: #fff;
+            float: left;
+        }
+
+        .header_top ul li i {
+            margin: 0 2px 0 0;
+        }
+
+        .header_top ul li i {
+            color: #fff;
+            transition: ease all 0.2s;
+            font-size: 18px;
+            margin-right: 5px;
+        }
+
+        .header_top .social_icon ul li a {
+            color: #fff;
+        }
+
+        .top_information.pull-left li {
+            margin-right: 20px;
+        }
+
+        .top_information.pull-right li {
+            margin-left: 20px;
+        }
+
+        .logo {
+            float: left;
+            margin: 19px 0 19px;
+            position: relative;
+            /* left: 0; */
+            right: 0.7pc;
+        }
+
+        .logo img {
+            height: 80px;
+        }
+
+        .header_style_1 .header_top {
+            position: relative;
+        }
+
+        .make_appo {
+            float: right;
+        }
+
+        .make_appo .btn.white_btn {
+            margin: 0;
+            border-radius: 0;
+            font-weight: 600;
+            padding: 0 35px;
+            font-family: 'Raleway', sans-serif;
+        }
+
+        .topbar-left {
+            float: left;
+        }
+
+        .header_top .topbar-left .list-inline {
+            float: left;
+            margin: 13px 0;
+        }
+
+        .header_top ul li {
+            font-size: 13px;
+            color: #fff;
+            float: left;
+            margin-right: 20px;
+        }
+
+        .mechanic header#default_header {
+            border-top: solid #3c5c9e 8px;
+        }
+
+        .mechanic .logo {
+            margin: 25px 0 0;
+        }
+
+        .header_bottom {
+            position: relative;
+            z-index: 9;
+        }
+        /* menu */
+
+        .search-pos {
+            width: 39pc;
+            padding:0.6pc;
+            border: 1px solid black;
+            border-radius: 0.5pc;
+        }
+
+        .orange {
+            color: #F47536;
+        }
+
+        .menu_side {
+            float: right;
+            width: auto;
+        }
+
+        .main_menu div#navbar_menu ul li a i {
+            font-weight: 600;
+        }
+
+        #navbar_menu,
+        #navbar_menu ul,
+        #navbar_menu ul li,
+        #navbar_menu ul li a,
+        #navbar_menu #menu-button {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            list-style: none;
+            line-height: 1;
+            display: block;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            color: #652B89;
+        }
+
+        #navbar_menu ul,
+        #navbar_menu ul li,
+        #navbar_menu ul li a,
+        #navbar_menu #menu-button {
+            position: relative;
+            color: #652B89;
+        }
+
+        #navbar_menu:after,
+        #navbar_menu>ul:after {
+            content: ".";
+            display: block;
+            clear: both;
+            visibility: hidden;
+            line-height: 0;
+            height: 0;
+        }
+
+        #navbar_menu #menu-button {
+            display: none;
+        }
+
+        #navbar_menu {
+            margin: 37px 0 0 0;
+            float: left;
+        }
+
+        #navbar_menu>ul>li {
+            float: left;
+        }
+
+        #navbar_menu.align-center>ul {
+            font-size: 0;
+            text-align: center;
+        }
+
+        #navbar_menu.align-center>ul>li {
+            display: inline-block;
+            float: none;
+        }
+
+        #navbar_menu.align-center ul ul {
+            text-align: left;
+        }
+
+        #navbar_menu.align-right>ul>li {
+            float: right;
+        }
+
+        #navbar_menu>ul>li>a {
+            padding: 15px 18px;
+            font-size: 14px;
+            color: #000;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        #navbar_menu ul ul {
+            position: absolute;
+            left: -9999px;
+        }
+
+        #navbar_menu.align-right ul ul {
+            text-align: right;
+        }
+
+        #navbar_menu ul ul li {
+            height: 0;
+            -webkit-transition: all .25s ease;
+            -moz-transition: all .25s ease;
+            -ms-transition: all .25s ease;
+            -o-transition: all .25s ease;
+            transition: all .25s ease;
+        }
+
+        #navbar_menu li:hover>ul {
+            left: auto;
+        }
+
+        #navbar_menu.align-right li:hover>ul {
+            left: auto;
+            right: 0;
+        }
+
+        #navbar_menu li:hover>ul>li {
+            height: 45px;
+        }
+
+        #navbar_menu ul ul ul {
+            margin-left: 100%;
+            top: 0;
+        }
+
+        #navbar_menu.align-right ul ul ul {
+            margin-left: 0;
+            margin-right: 100%;
+        }
+
+        #navbar_menu ul ul li a {
+            padding: 15px 20px 15px;
+            font-size: 14px;
+            color: #999;
+            font-weight: 500;
+            background: #fff;
+            color: #666 !important;
+        }
+
+        #navbar_menu ul ul li:last-child>a,
+        #navbar_menu ul ul li.last-item>a {}
+
+        #navbar_menu ul ul li:hover>a,
+        #navbar_menu ul ul li a:hover {
+            color: #ffffff;
+        }
+
+        #navbar_menu ul ul {
+            width: 250px;
+            box-shadow: 0 5px 35px -18px #000;
+            border-top: solid #000 2px;
+        }
+
+        #navbar_menu ul ul li a:hover,
+        #navbar_menu ul ul li a:focus {
+            color: #F47536 !important;
+            padding: 15px 20px 15px;
+        }
+
+        .main_bg {
+            margin-top: 0px;
+            min-height: 70px;
+            position: relative;
+        }
 
         .border {
             border: grey
@@ -307,7 +600,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             height: 42px;
             outline: none;
             box-shadow: none;
-            background: #1accfd;
+            background: #652B89;
             padding: 0;
             border-radius: inherit;
             -webkit-appearance: none;
@@ -439,12 +732,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
         /* placeholder */
 
-        .modal-body.modal-body-sub_agile ::-webkit-input-placeholder {
+         ::-webkit-input-placeholder {
             color: #212121 !important;
         }
         /* //placeholder */
 
-        .modal-body.modal-body-sub_agile p a {
+        .modal-body.modal-body-sub_agilemodal-body.modal-body-sub_agile p a {
             color: #FF5722;
         }
 
@@ -728,7 +1021,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             -webkit-transform: perspective(1px) translateZ(0);
             transform: perspective(1px) translateZ(0);
             box-shadow: 0 0 1px transparent;
-            background: #1accfd;
+            background: white;
             border-radius: 4px;
             color: #fff;
             letter-spacing: 2px;
@@ -742,12 +1035,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             -webkit-transform: perspective(1px) translateZ(0);
             transform: perspective(1px) translateZ(0);
             box-shadow: 0 0 1px transparent;
-            background: #0d90b4;
+            background: white;
             border-radius: 4px;
-            color: #fff;
+            color: black;
             letter-spacing: 2px;
             padding: 11px 27px;
             margin-top: 2em;
+        }
+
+        .info2:hover {
+            color: white;
         }
 
         .button2:hover,
