--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1,11 +1,3 @@
-/*--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
-
-
 /* multi level */
 
 @media (min-width: 992px) {
@@ -208,7 +200,9 @@ label {
     -moz-transition: .5s all;
     transition: .5s all;
     position: relative;
-    top: 2.7pc;
+    top: 2.5rem;
+    border-radius: 0.6em;
+    /* top: 2.5pc; */
     left: 0.6pc;
 }
 
@@ -545,67 +539,73 @@ button.w3view-cart {
     width: 100%;
 }
 
-.carousel-caption {
-    /* position: inherit; */
-    /* min-height: 20pc;
-    padding-top: 8em; */
-}
+
+/*
+                .carousel-caption {
+                    /* position: inherit; */
 
 
+/* min-height: 20pc;
+                    padding-top: 8em; */
+
+*/
 /*-- carousel-slider --*/
 
 .carousel .item {
-    background:  url(../images/banner1.jpg) no-repeat;
+    background: url(../images/banner1.jpg) no-repeat;
     background-size: 100%;
-    height:20pc;
+    height: 20pc;
 }
 
 .carousel .item.item2 {
-    background:  url(../images/banner1.jpg) no-repeat;
+    background: url(../images/banner1.jpg) no-repeat;
     background-size: 100%;
-    height:20pc;
+    height: 20pc;
 }
 
 .carousel .item.item3 {
-    background:  url(../images/banner1.jpg) no-repeat;
+    background: url(../images/banner1.jpg) no-repeat;
     background-size: 100%;
-    height:20pc;
+    height: 20pc;
 }
 
 .carousel .item.item4 {
-    background:  url(../images/banner1.jpg) no-repeat;
+    background: url(../images/banner1.jpg) no-repeat;
     background-size: 100%;
-    height:20pc;
+    height: 20pc;
 }
+
+
 /* .carousel-caption h2,
-.carousel-caption h3 {
-    font-size: 5em;
-    font-weight: 600;
-    letter-spacing: 0px;
-    text-transform: uppercase;
-    text-shadow: 3px 8px 2px rgb(12, 12, 12);
-    background: rgba(0, 0, 0, 0.34);
-    padding: 35px 0; */
-}
+                .carousel-caption h3 {
+                    font-size: 5em;
+                    font-weight: 600;
+                    letter-spacing: 0px;
+                    text-transform: uppercase;
+                    text-shadow: 3px 8px 2px rgb(12, 12, 12);
+                    background: rgba(0, 0, 0, 0.34);
+                    padding: 35px 0;
 
-.carousel-caption h2 span,
-.carousel-caption h3 span {
-    font-weight: 800;
-    color: #FF5722;
-}
 
-/* .carousel-caption p {
-    letter-spacing: 5px;
-    font-size: 24px;
-    color: #fff;
-    margin: 20px 0; */
-}
+                }
+                .carousel-caption h2 span,
+                .carousel-caption h3 span {
+                    font-weight: 800;
+                    color: #FF5722;
+                }
+
+                /* .carousel-caption p {
+                    letter-spacing: 5px;
+                    font-size: 24px;
+                    color: #fff;
+                    margin: 20px 0;} */
+
 
 /* .carousel-caption p span {
-    font-size: 40px;
-    letter-spacing: 0px;
-    font-weight: 600;
-} */
+                    font-size: 40px;
+                    letter-spacing: 0px;
+                    font-weight: 600;
+                } */
 
 .codes.agileitsbg3 {
     background: #3498DB;
@@ -763,11 +763,11 @@ button.w3view-cart {
     -o-transition: 0.5s all;
     -ms-transition: 0.5s all;
     transition: 0.5s all;
-    bottom: -25px!important;
+    bottom: -25px !important;
     right: 0 !important;
-    border: 1px solid #1accfd!important;
-    border-radius: 0px!important;
-    text-shadow: none!important;
+    border: 1px solid #1accfd !important;
+    border-radius: 0px !important;
+    text-shadow: none !important;
 }
 
 #PPminicartk .minicartk-subtotal {
@@ -2367,7 +2367,7 @@ section#tables p {
 .table>tfoot>tr>th,
 .table>thead>tr>td,
 .table>thead>tr>th {
-    padding: 15px!important;
+    padding: 15px !important;
 }
 
 .table>thead>tr>th,
@@ -3471,17 +3471,14 @@ select.form-control.option-w3ls {
         background-size: 100%;
         height: 5.7pc;
     }
-
     .carousel .item.item2 {
         background-size: 100%;
         height: 5.7pc;
     }
-
     .carousel .item.item3 {
         background-size: 100%;
         height: 5.7pc;
     }
-
 }
 
 @media(max-width: 1366px) {
@@ -4623,7 +4620,7 @@ select.form-control.option-w3ls {
         font-size: 14px;
     }
     .creditly-card-form .submit span {
-        padding: 11px 18px;
+        padding: 11px 28px;
         font-size: 14px;
     }
     .vertical_post h5 {
@@ -5302,7 +5299,7 @@ select.form-control.option-w3ls {
     }
     #PPminicartk .minicartk-submit {
         right: 18px !important;
-        bottom: -87px!important;
+        bottom: -87px !important;
         margin-bottom: 20px !important;
     }
     .checkout-right h4 {
@@ -5822,4 +5819,119 @@ label.star:before {
 
 .sortable-handler {
     touch-action: none;
+}
+
+@media screen and (max-width: 600px) {
+    .carousel .item {
+        background: url(../images/Mobile.jpg) no-repeat;
+        background-size: 100%;
+        height: 30pc;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .carousel .item.item.item2 {
+        background: url(../images/Mobile.jpg) no-repeat;
+        background-size: 100%;
+        height: 30pc;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .carousel .item.item.item3 {
+        background: url(../images/Mobile.jpg) no-repeat;
+        background-size: 100%;
+        height: 30pc;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .carousel .item.item.item4 {
+        background: url(../images/Mobile.jpg) no-repeat;
+        background-size: 100%;
+        height: 30pc;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #footer-categories {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .download-app {
+        float: left;
+        width: 50%;
+    }
+}
+
+
+/* Header search */
+
+.search {
+    border: 1px solid black;
+    overflow: auto;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin-top: 20px;
+}
+
+.search input[type="text"] {
+    border: 0px;
+    width: 67%;
+    padding: 10px 10px;
+    text-align: right;
+}
+
+.search input[type="text"]:focus {
+    outline: 0;
+}
+
+.search button[type="submit"] {
+    border: 0px;
+    background: none;
+    background-color: #1accfd;
+    color: #fff;
+    float: left;
+    padding: 10px;
+    border-radius-top-right: 5px;
+    -moz-border-radius-top-right: 5px;
+    -webkit-border-radius-top-right: 5px;
+    border-radius-bottom-right: 5px;
+    -moz-border-radius-bottom-right: 5px;
+    -webkit-border-radius-bottom-right: 5px;
+    cursor: pointer;
+}
+
+.search .btn-default:hover {
+    background: #FF5722;
+}
+
+
+/* ===========================
+                                                                                ====== Medua Query for Search Box ======
+                                                                                =========================== */
+
+@media only screen and (min-width: 150px) and (max-width: 780px) {
+    .search {
+        width: 95%;
+        margin: 0 auto;
+    }
+}
+
+#user-information {
+    margin: 1rem 0rem;
+    padding: 2rem;
+    text-align: right;
+}
+
+#user-card {
+    width: 18rem;
+    border: solid #1accfd 0.25rem;
+    padding: 1em;
+    text-align: center;
+    border-radius: 10%;
+    margin: 1rem;
 }
