--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1039,10 +1039,9 @@
                         font-size: 13px;
                         outline: none;
                         background: none;
-                        word-spacing: 1em;
                         color: #000 !important;
                         position: absolute;
-                        left: 0%;
+                        left: 34%;
                         top: -27px;
                         margin-top: -10px;
                     }
@@ -5783,3 +5782,11 @@
                         display: flex;
                         justify-content: end;
                     }
+
+                    .side-bar button{
+                        background-color: #1accfd;
+                    }
+
+                    #
+                    product-page
+
